Added function to add xml to situationtemplates as string
